# CV_resources_and_assignments_COL780

./: .gitignore  CMakeLists.txt  DisplayImage  README.md
Assignment_minus_1/: CMakeLists.txt
Assignment_minus_1/include/: main.h
Assignment_minus_1/src/: main.cpp
Assignments/Assignment_1/: Assignment_1  CMakeLists.txt  README.md
Assignments/Assignment_1/include/: circular_queue.h  medial_axis.h
Assignments/Assignment_1/input/: tuning_params.json
Assignments/Assignment_1/src/: circular_queue.cpp  main.cpp  medial_axis.cpp
Assignments/Assignment_2/: Assignment_2  CMakeLists.txt
Assignments/Assignment_2/include/: Mesh.h  bfs.h  f_utils.h  main.h
Assignments/Assignment_2/input/: meta.json
Assignments/Assignment_2/src/: Mesh.cpp  bfs.cpp  f_utils.cpp  main.cpp
Assignments/Assignment_3/: CMakeLists.txt
Assignments/Assignment_3/input/: VID5.xml  in_VID5.xml
Assignments/Assignment_3/src/: main.cpp
Assignments/Assignment_4/: code.py  finger.py  main.py  test.py  test2.py  test3.py  trained_final_submission.pth  trained_net.pth  trained_net_2.pth  trained_net_3.pth  trained_net_6.pth  trained_net_7.pth  trained_net_lastest.pth  trained_smart2.pth  trained_tuesday.pth  trainer_script.ipynb  try1.ipynb
Assignments/Assignment_minus_1/: CMakeLists.txt  assignment_minus_1
Assignments/Assignment_minus_1/include/: main.h
Assignments/Assignment_minus_1/src/: main.cpp
Assignments/DisplayImage/: CMakeLists.txt  DisplayImage  DisplayImage.cpp
Assignments/EigenExample/: CMakeLists.txt  EigenExample
Assignments/EigenExample/include/: EigenExample.h
Assignments/EigenExample/src/: EigenExample.cpp
Assignments/HistEqualization/: CMakeLists.txt  HistEqualization  HistEqualization.cpp
HistEqualization/: HistEqualization.cpp
